[package]
authors = ["christos <christos@openquery.io>"]
description = "An unofficial Rust client for Posthog (https://posthog.com/)."
edition = "2018"
license = "MIT"
name = "posthog-rs"
repository = "https://github.com/openquery-io/posthog-rs"
rust-version = "1.78.0"
version = "0.3.5"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.20.2"
reqwest = { version = "0.11.3", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
semver = "1.0.24"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "2.0.11"
uuid = { version = "1.13.2", features = ["serde", "v7"] }

[dev-dependencies]
ctor = "0.1.26"
dotenv = "0.15.0"

[features]
async-client = []
default = ["async-client"]
e2e-test = []
